Tools/WebKitTestRunner/PlatformWebView.h
@@ -77,6 +77,7 @@ public:
     bool sendEvent(QEvent*);
     void postEvent(QEvent*);
     void setModalEventLoop(QEventLoop* eventLoop) { m_modalEventLoop = eventLoop; }
+    static bool windowShapshotEnabled();
 #endif
 
     WKRect windowFrame();
